# SpeakFlow

./: app.py  pyproject.toml  test.py  voice_util.py  xq.txt
templates/: index.html
